unpackaged/objects/BaseURL__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This setting will be used for a formula field to generate the Source OpCo record link</description>
    <fields>
        <fullName>Beckman__c</fullName>
        <label>Beckman</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ContactBatchLimit__c</fullName>
        <label>ContactBatchLimitField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDBS__c</fullName>
        <label>IDBS</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Leica__c</fullName>
        <label>Leica</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Moldev__c</fullName>
        <label>Moldev</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SCIEX__c</fullName>
        <label>SCIEX</label>
        <type>Url</type>
    </fields>
    <label>OpCo Base URL</label>
</CustomObject>